Fix node-card images, added a gap

--- a/css/components/node-card.css
+++ b/css/components/node-card.css
@@ -2,13 +2,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 40px;
 }
 
 .node-card .logo {
   display: flex;
   align-items: center;
   height: 140px;
-  margin-right: 100px;
   margin-bottom: 30px;
   padding-left: 20px;
   padding-right: 20px;
